--- a/track_hymn/static/css/theme.css
+++ b/track_hymn/static/css/theme.css
@@ -98,12 +98,12 @@ p {
 
 .starter-template .links ul li a, a {
     color: var(--gold);
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .starter-template .links ul li a:hover, a:hover {
     color: #ffffff;
-    text-decoration: underline;
+    text-decoration: none;
 }
 
 .starter-template .links ul li .icon-muted {
