--- a/track_hymn/static/css/site.css
+++ b/track_hymn/static/css/site.css
@@ -1,11 +1,17 @@
-.hymns {}
+body {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.hymns {
+}
 
 .hymns h2 {
     color: var(--gold);
 }
 
 .hymn-form input {
-    margin: 10px;
+    /*margin: 10px;*/
     /*text-align: left;*/
 }
 
