styles and forms with icons

--- a/track_hymn/static/css/theme.css
+++ b/track_hymn/static/css/theme.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Palatino", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 300;
     /*color: #ffffff;*/
     background: var(--green);
@@ -18,7 +18,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: "Palatino", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: 300;
 }
 
