--- a/deploy/roles/common/templates/nginx_ssl.conf.j2
+++ b/deploy/roles/common/templates/nginx_ssl.conf.j2
@@ -27,7 +27,7 @@ keepalive_timeout     5;
 # nginx serve up static files and never send to the WSGI server
 location /static {
 autoindex on;
-alias {{ app_dir }}/static;
+alias {{ app_dir }}/track_hymn/static;
 }
 
 location / {
